--- a/package.json
+++ b/package.json
@@ -10,40 +10,40 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.17",
-    "hapi": "13.0.0",
-    "es6-shim": "0.35.0",
+    "hapi": "^13.5.0",
+    "es6-shim": "^0.35.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "gulp": "3.9.0",
-    "gulp-add-src": "0.2.0",
-    "gulp-babel": "6.1.0",
-    "gulp-changed": "1.3.0",
-    "gulp-ext-replace": "0.2.0",
-    "gulp-filter": "2.0.2",
-    "gulp-if": "2.0.0",
-    "gulp-insert": "0.4.0",
-    "gulp-jade": "1.1.0",
-    "gulp-livereload": "3.8.0",
-    "gulp-newer": "1.1.0",
-    "gulp-print": "2.0.1",
-    "gulp-replace": "0.5.3",
-    "gulp-sass": "2.0.4",
-    "gulp-sourcemaps": "1.5.2",
-    "gulp-strip-comments": "1.0.1",
-    "gulp-tslint": "3.1.2",
-    "gulp-typedoc": "1.1.0",
-    "gulp-typescript": "2.9.2",
-    "gulp-watch": "4.3.5",
-    "mocha": "2.2.5",
-    "regenerator": "0.8.42",
-    "run-sequence": "1.0.2",
-    "source-map-support": "0.3.1",
-    "typings": "0.7.12",
-    "tslint": "3.10.2",
-    "typedoc": "0.3.5",
-    "typescript": "1.8.10"
+    "gulp": "^3.9.1",
+    "gulp-add-src": "^0.2.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-changed": "^1.3.0",
+    "gulp-ext-replace": "^0.3.0",
+    "gulp-filter": "^2.0.2",
+    "gulp-if": "^2.0.1",
+    "gulp-insert": "^0.5.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-newer": "^1.2.0",
+    "gulp-print": "^2.0.1",
+    "gulp-replace": "^0.5.4",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-strip-comments": "^1.0.1",
+    "gulp-tslint": "^3.1.2",
+    "gulp-typedoc": "^1.1.0",
+    "gulp-typescript": "^2.13.6",
+    "gulp-watch": "^4.3.8",
+    "mocha": "^2.5.3",
+    "regenerator": "^0.8.46",
+    "run-sequence": "^1.2.2",
+    "source-map-support": "^0.4.1",
+    "typings": "^0.7.12",
+    "tslint": "^3.13.0",
+    "typedoc": "^0.3.5",
+    "typescript": "^1.8.10"
   }
 }
