--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-typedoc": "^1.1.0",
     "gulp-typescript": "^2.13.6",
     "gulp-watch": "^4.3.8",
+    "gulp-mocha": "^2.2.0",
     "mocha": "^2.5.3",
     "regenerator": "^0.8.46",
     "run-sequence": "^1.2.2",
